done crash course 2 by Jaydan Urwin

--- a/src/index.html
+++ b/src/index.html
@@ -7,3 +7,4 @@ title: "Eleventy Crash Course #1"
 <h2>I am the homepage!</h2>
 <p>I am a paragraph....</p>
 <a href="/contact">GO TO CONTACT</a>
+<img src="/assets/pictures/chair-in-empty-room.jpg" alt="A chair sitting in an empty, modern minimalistic room" width="300px">
